[B]Version 2.0.1[/B]

- new youtube video ID regex

[B]Version 2.0.0[/B]

- complete rewrite by cdwertmann